Do not give error on different placement in array